--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express-session": "^1.18.0",
     "mongoose": "^8.6.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
+    "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   }
