--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node main.js"
   },
-  "author": "Bikram nahak",
+  "author": "Kirtan Malviya",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
